<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <Button
        android:id="@+id/topupBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_border"
        android:padding="72dp"
        android:onClick="goTopup"
        android:text="@string/topup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/snekBtn"
        app:layout_constraintVertical_bias="0.092" />

    <Button
        android:id="@+id/fudBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_border"
        android:padding="72dp"
        android:onClick="goFud"
        android:text="@string/foods"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDrink"
        app:layout_constraintVertical_bias="0.092" />

    <Button
        android:id="@+id/btnDrink"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_border"
        android:padding="72dp"
        android:text="@string/drinks"
        android:onClick="goDrink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMyOrder"
        app:layout_constraintVertical_bias="0.102" />

    <Button
        android:id="@+id/snekBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_border"
        android:padding="72dp"
        android:text="@string/snacks"
        android:onClick="goSnek"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMyOrder"
        app:layout_constraintVertical_bias="0.102" />

    <Button
        android:id="@+id/btnMyOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:background="@drawable/rounded_border"
        android:text="@string/myorder"
        android:onClick="myOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>