<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Myorder">

    <TextView
        android:id="@+id/bg"
        android:layout_width="450dp"
        android:layout_height="400dp"
        android:background="@drawable/erounded_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.871"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.074" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myorder"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/harga"
        app:layout_constraintBottom_toBottomOf="@+id/bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mwtxt"
        app:layout_constraintVertical_bias="0.799" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jusalpukat"
        app:layout_constraintBottom_toBottomOf="@+id/bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        app:layout_constraintVertical_bias="0.241" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.121" />

    <Button
        android:id="@+id/btnMainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_border"
        android:onClick="goPay"
        android:text="@string/paynow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bg"
        app:layout_constraintVertical_bias="0.254" />

    <TextView
        android:id="@+id/mwtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/airmineral"
        app:layout_constraintBottom_toBottomOf="@+id/bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bg"
        app:layout_constraintVertical_bias="0.086" />

    <TextView
        android:id="@+id/mwtxt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/harga"
        app:layout_constraintBottom_toBottomOf="@+id/bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mwtxt"
        app:layout_constraintVertical_bias="0.033" />

    <TextView
        android:id="@+id/jap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/harga"
        app:layout_constraintBottom_toBottomOf="@+id/bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mwtxt"
        app:layout_constraintVertical_bias="0.294" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jusapel"
        app:layout_constraintBottom_toBottomOf="@+id/bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mwtxt"
        app:layout_constraintVertical_bias="0.197" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jusmangga"
        app:layout_constraintBottom_toBottomOf="@+id/bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mwtxt"
        app:layout_constraintVertical_bias="0.452" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/harga"
        app:layout_constraintBottom_toBottomOf="@+id/bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mwtxt"
        app:layout_constraintVertical_bias="0.547" />

    <TextView
        android:id="@+id/totalPricetxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/total"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bg"
        app:layout_constraintVertical_bias="0.284" />

    <TextView
        android:id="@+id/totalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qty1"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnMainMenu"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toEndOf="@+id/totalPricetxt"
        app:layout_constraintTop_toBottomOf="@+id/bg"
        app:layout_constraintVertical_bias="0.284" />

    <TextView
        android:id="@+id/mineralQ"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.696"
        app:layout_constraintStart_toEndOf="@+id/mwtxt2"
        app:layout_constraintTop_toTopOf="@+id/bg"
        app:layout_constraintVertical_bias="0.139" />

    <TextView
        android:id="@+id/jusApQ"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.696"
        app:layout_constraintStart_toEndOf="@+id/jap"
        app:layout_constraintTop_toTopOf="@+id/bg"
        app:layout_constraintVertical_bias="0.364" />

    <TextView
        android:id="@+id/jusJMQ"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.696"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toTopOf="@+id/bg"
        app:layout_constraintVertical_bias="0.589" />

    <TextView
        android:id="@+id/jusAlQ"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.696"
        app:layout_constraintStart_toEndOf="@+id/textView18"
        app:layout_constraintTop_toTopOf="@+id/bg"
        app:layout_constraintVertical_bias="0.809" />

    <Button
        android:id="@+id/minMW"
        android:layout_width="36dp"
        android:layout_height="27dp"
        android:background="@drawable/ic_remove_black_24dp"
        android:onClick="gominMW"
        app:layout_constraintBottom_toBottomOf="@+id/bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/mineralQ"
        app:layout_constraintTop_toTopOf="@+id/bg"
        app:layout_constraintVertical_bias="0.139" />

    <Button
        android:id="@+id/minAp"
        android:layout_width="36dp"
        android:layout_height="27dp"
        android:background="@drawable/ic_remove_black_24dp"
        android:onClick="gominAp"
        app:layout_constraintBottom_toBottomOf="@+id/bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/jusApQ"
        app:layout_constraintTop_toTopOf="@+id/bg"
        app:layout_constraintVertical_bias="0.364" />

    <Button
        android:id="@+id/minJm"
        android:layout_width="36dp"
        android:layout_height="27dp"
        android:background="@drawable/ic_remove_black_24dp"
        android:onClick="gominJm"
        app:layout_constraintBottom_toBottomOf="@+id/bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/jusJMQ"
        app:layout_constraintTop_toTopOf="@+id/bg"
        app:layout_constraintVertical_bias="0.589" />

    <Button
        android:id="@+id/minAl"
        android:layout_width="36dp"
        android:layout_height="27dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_remove_black_24dp"
        android:onClick="gominAl"
        app:layout_constraintBottom_toBottomOf="@+id/bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/jusAlQ"
        app:layout_constraintTop_toTopOf="@+id/bg"
        app:layout_constraintVertical_bias="0.809" />

    <TextView
        android:id="@+id/moneyT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="saldo"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.864"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.779" />
</androidx.constraintlayout.widget.ConstraintLayout>